--- a/style.css
+++ b/style.css
@@ -53,9 +53,9 @@
     transition: 0.5s;
 }
 #slider h4:hover{
-    text-decoration: none;
+    font-weight: 900;
     color: blue;
-    font-size: 1.7rem;
+    font-size: 1.8rem;
     transition: 0.5s;
 }
 #slider h4::before{
@@ -73,7 +73,8 @@
     z-index: -1;
 }
 #slider h4:hover::before{
+    /* its turned of */
     visibility: visible;
-    transform: scale(1);
+    transform: scale(0);
     transition: 0.5s;
 }
