--- a/style.css
+++ b/style.css
@@ -169,20 +169,17 @@
     transition: 0.5s;
 }
 #main{
-    background-color: #fcf1f1;
+    background-color: #f0f0f0;
 }
  #main .left{
-    background-color: #efe6e6;
  }
  #main .right{
-    background-color: #efe6e6;
-    /* padding-left: 0px;
-    padding-right: 0px; */
  }
  .body{
-    height: 300px;
+    height: 100%;
     width: 100%;
     background-color: rgb(254, 254, 254);
+    border-radius: 10px;
  }
  .breadcrumb{
     background-color: #f0f0f0;
@@ -194,9 +191,10 @@
 
  /* .notice board */
  .notice{
-    height: 300px;
+    height: 100%;
     width: 100%;
     background-color: rgb(255, 255, 255);
+    border-radius: 10px;
  }
 .notice .nu{
     padding: 5px;
