--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-
+.header{
+    background-color: rgba(223, 228, 234,0.5);
+}
 .container{
     max-width: 1600px;
 }
 
 .mybg{
-    background-color: #fefefe;
+    background-color: #dfe4ea;
 }
 .myfs{
     font-weight: 500;
@@ -116,13 +118,19 @@
 
 /* navbar  */
 
+/* menu___________________ */
+.menu{
+    background-color: rgba(123, 237, 159,.5);
+}
+.menu .container{
+    background-color: #7bed9f;
+    color: #7bed9f;
+}
 
 
 
 
-
-
-
+/* slider___________________________________________________ */
 
 #slider{
     background-color: #f3f1f1;
@@ -179,7 +187,7 @@
     height: 100%;
     width: 100%;
     background-color: rgb(254, 254, 254);
-    border-radius: 10px;
+    /* border-radius: 10px; */
  }
  .breadcrumb{
     background-color: #f0f0f0;
@@ -194,7 +202,7 @@
     height: 100%;
     width: 100%;
     background-color: rgb(255, 255, 255);
-    border-radius: 10px;
+    /* border-radius: 10px; */
  }
 .notice .nu{
     padding: 5px;
@@ -245,3 +253,35 @@
 }
 
 
+/* footer  */
+.footer{
+    background-color: rgba(51, 73, 94,0.4);
+}
+.footer .container h5{
+    color: #7bed9f;
+}
+.footer .container{
+    background-color: #34495e;
+    color: white;
+}
+/* .footer .left{} */
+.footer .left p{
+    padding-left: 10px;
+}
+/* .footer .map{} */
+/* .footer .right{} */
+.footer .right ul{
+    list-style: none;
+    padding-left: 10px;
+}
+.footer .right ul li{
+    margin-left: 0px ;
+}
+.footer .right ul li a{
+    text-decoration: none;
+    color: white;
+}
+.footer .right ul li a:hover{
+    color: #7bed9f;
+    transition: 0.3s;
+}
