--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
     width: 300px;
     background-color: #2c3c4c;
     z-index: 2;
-    border-radius: 10px;
+    border-radius: 0px 0px 10px 10px;
 }
 .ddml{
     display: block;
@@ -105,10 +105,6 @@
         transition: .5s;
     }
 }
-
-
-
-
 
 
 
